# stm32-recipes

./: CMakeLists.txt  CORTEX_FUNDAMENTALS.md  Dockerfile  LICENSE  NOTIFICATIONS.md  README.md  TOOLS.md  build-and-push-docker.sh  push-docker-image.sh  setupenv.sh  start-dev-container.sh  test-ci.sh  thirdparty.sh
.github/workflows/: build-advanced.yml  build-simple.yml  build.yml
bareMetalBlink/: CMakeLists.txt  create_configs.sh
bareMetalBlink/src/: main.c
bareMetalPWM/: CMakeLists.txt
bareMetalPWM/src/: main.c
bareMetalSysTick/: CMakeLists.txt
bareMetalSysTick/src/: main.c
bareMetalUART/: CMakeLists.txt
bareMetalUART/src/: main.c
cortexDebugTrace/: CMakeLists.txt
cortexDebugTrace/src/: main.c
cortexExceptions/: CMakeLists.txt
cortexExceptions/src/: main.c
cortexMemoryMap/: CMakeLists.txt
cortexMemoryMap/src/: main.c
cortexPowerModes/: CMakeLists.txt
cortexPowerModes/src/: main.c
cortexSysTick/: CMakeLists.txt
cortexSysTick/src/: main.c
cortexSystemControl/: CMakeLists.txt
cortexSystemControl/src/: main.c
